# Distributional_RL_Decision_and_Control

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  README.md
action_planner/: CMakeLists.txt
action_planner/cmake/: FetchTorch.cmake
docker/: .dockerignore  .gitignore  Dockerfile.base-minimal  Makefile  base.Containerfile  build.bash  collect_package_xml.bash  run.bash
docker/overrides/: ros_entrypoint.sh
docker/scripts/: collect_package_xml.bash  collect_package_xml_aux.bash  tar_package_xml.bash
gzilla/: CMakeLists.txt  package.xml  pyproject.toml  setup.cfg
gzilla/config/: codegen_runner.py  codegen_xsd_runner.py  gui.config  gui_minimal.config  gz_plugin_mappings.yaml  gz_sensor_mappings.yaml  gz_vrx_plugin_mappings.yaml  launch_runner.py  sdf_runner.py
gzilla/config/schema/: gz_plugin_map.json  gz_plugin_spec.json  gz_sensor_map.json  gz_sensor_spec.json  gz_topic_spec.json
gzilla/config/sdflib/: __init__.py  util.py
gzilla/hooks/: python_path_vendor.dsv.in
gzilla/include/gzilla/: GuiRunner.hh  gzbridge.hpp  gzcommon.hpp  gzgui.hpp  gzserver.hpp  service_bridge.hpp  topic_bridge.hpp
gzilla/python/gzilla/: __init__.py  gz_spawn.py  gz_spawn_lifecycle.py
gzilla/python/gzilla/actions/: __init__.py  ros_gz_payload_bridge.py
gzilla/python/gzilla/codegen/: __init__.py  gz_plugin_map.py  gz_plugin_spec.py  gz_sensor_map.py  gz_sensor_spec.py  gz_topic_spec.py
gzilla/python/gzilla/mappings/: data.py  message_mapping.py  plugin_mapping.py  sensor_mapping.py  specs.py
gzilla/python/gzilla/sdflib/: __init__.py  util.py
gzilla/scripts/: check_schema.bash  codegen.bash  codegen_xsd.bash  convert_bridges.bash  gz_sim_system_plugins.bash  sdformat_sensor_types.bash
gzilla/src/: GuiRunner.cc  gzbridge.cpp  gzgui.cpp  gzserver.cpp
rfarl/: package.xml  pyproject.toml  setup.cfg  setup.py
rfarl/rfarl/: agent.py
rfarl/rfarl/envs/marinenav/: __init__.py  env.py
rfarl/rfarl/scripts/: train_RL_agents.py
rfarl/rfarl/utils/: env_visualizer.py
virelex/: CMakeLists.txt  package.xml  setup.cfg
virelex/cmake/: FetchTorch.cmake
virelex/hooks/: resource_paths.dsv.in  resource_paths.sh
virelex/launch/: action_planner.launch.py  action_planner.launch.xml  collision_detector.launch.py  collision_detector.launch.xml  competition-aux.launch.xml  competition-aux.launch.yaml  competition.launch.py  competition.launch.xml  lidar_processor.launch.py  lidar_processor.launch.xml  payload_bridge_test.launch.xml  runner.launch.xml  state_processor.launch.py  state_processor.launch.xml  unified.launch.xml
virelex/models/fog_generator/: model.sdf
virelex/models/robotx_light_buoy_rgb_waves/: model.config  model.sdf
virelex/models/robotx_light_buoy_rgy_waves/: model.config  model.sdf
virelex/models/robotx_light_buoy_unlit/: model.config  model.sdf
virelex/models/robotx_light_buoy_ybr_waves/: model.config  model.sdf
virelex/models/robotx_light_buoy_yrg_waves/: model.config  model.sdf
virelex/python/virelex/: __init__.py  experiment.py  run_vrx_experiments.py  runner_aux.py
virelex/python/virelex/actions/: __init__.py  node_list.py
virelex/python/virelex/backports/: __init__.py  for_loop.py  for_loop_var.py
virelex/python/virelex/substitutions/: __init__.py  namespace_substitution.py
virelex/scripts/: experiment_setup.py  run_vrx_experiments.py
virelex/src/: action_planner_node.cpp  lidar_processor_node.cpp  state_processor_node.cpp
virelex/src/planner/: action_planner.hpp  rl_planner.hpp
virelex/worlds/: sydney_regatta_minimal.sdf
virelex_msgs/: CMakeLists.txt  package.xml
