<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gzilla</name>
  <version>0.1.0</version>
  <description>A bag of tools for interfacing simulations with ROS2</description>
  <maintainer email="pszenher@stevens.edu">Paul Szenher</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>ament_cmake_vendor_package</build_depend>
  
  <exec_depend>python3-pydantic</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <!-- The kitchen sink;  some cpp linters disagree on format style... -->
  <!-- <test_depend>ament_lint_common</test_depend> -->
  <test_depend>ament_cmake_clang_format</test_depend>
  <!-- Mind-bogglingly slow... -->
  <!-- <test_depend>ament_cmake_clang_tidy</test_depend> -->
  <test_depend>ament_cmake_mypy</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
