<?xml version="1.0"?>
<package format="3">
  <name>rfarl</name>
  <version>0.1.0</version>
  <description>
    Robust Field Autonomy Reinforcement-Learning
  </description>
  <author email="xlin26@stevens.edu">Xi Lin</author>
  <maintainer email="xlin26@stevens.edu">Xi Lin</maintainer>
  <maintainer email="pszenher@stevens.edu">Paul Szenher</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

</package>
